--- a/Streamlit_App/keys.env
+++ b/Streamlit_App/keys.env
@@ -1,3 +1,3 @@
-api_key_openai = "Your_API_key"
-api_key_google = "Your_API_key"
-api_key_cohere = "Your_API_key"
+api_key_openai = ""
+api_key_google = "AIzaSyAJT6_IYPjUtUyT14uzZ8BSON7rDul7Ab8"
+api_key_cohere = "jz2a6JYmE9Q6eBUX7ZzOogwaPUouDmzkvsAsEK1F"
